# hyperion-static-plugin

./: .gitignore  README.md  cabal.project  hyperion-static-plugin.cabal  static-plugin.cabal
src/Hyperion/Static/: Plugin.hs
src/Hyperion/Static/Plugin/: TH.hs
test/: DerivingSpec.hs
