cabal-version: 3.0
name: hyperion-static-plugin
version: 0.1.0.0
license: MIT
author: David Simmons-Duffin
maintainer: davidsd@gmail.com
build-type: Simple

library
  exposed-modules:
      Hyperion.Static.Plugin
      Hyperion.Static.Plugin.TH
  hs-source-dirs:
      src
  build-depends:
      base >= 4.20 && < 5
    , constraints
    , ghc == 9.12.*
    , ghc-boot-th
    , hyperion-static
    , template-haskell
  default-language: GHC2024
  ghc-options:
      -Wall

test-suite deriving-spec
  type: exitcode-stdio-1.0
  main-is: DerivingSpec.hs
  hs-source-dirs:
      test
  build-depends:
      base >= 4.20 && < 5
    , binary
    , hyperion-static
    , hyperion-static-plugin
  default-language: GHC2024
  ghc-options:
      -Wall
      -Werror
      -Wredundant-constraints
      -Wsimplifiable-class-constraints
